--- a/_sass/partials/override/_reset.scss
+++ b/_sass/partials/override/_reset.scss
@@ -5,6 +5,7 @@
 html, body {
     @extend .font-monospace;
     
+    overflow: hidden;
     width: 100%;
     height: 100%;
     word-break: keep-all;
